--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,26 @@ padding:12px;
 
 
 
-@media scre
+@media screen and (max-width: 767px) { 
+img{
+    float: none;
+    position: relative;
+    bottom: 20px;
+}
+    .filter {
+        position: static;
+        display:inline-block;
+        padding: 20px;
+    
+    } 
+    .first{
+        border-bottom:5px solid rgb(175, 174, 160);
+    }
+   .god{
+       margin-bottom: 50px;
+   }
+   
+ }
 
 
 
